Add on restart on failure to compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
       - "./config.yml:/app/config.yml"
     devices:
       - /dev/ttyUSB0:/dev/ttyUSB0
+    restart: on-failure
+
       
